// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders Gallery 1`] = `
<body>
  <div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 32px; color: rgba(186, 190, 195, 0.933);"
    >
      <div
        style="display: flex; justify-content: center; align-items: center; gap: 8px;"
      >
        <div
          style="width: 48px; padding: 8px; background-color: rgb(40, 57, 78); border-radius: 8px;"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          style="font-size: 12px; width: 100px;"
        >
          document
        </div>
      </div>
      <div
        style="display: flex; justify-content: center; align-items: center; gap: 8px;"
      >
        <div
          style="width: 48px; padding: 8px; background-color: rgb(40, 57, 78); border-radius: 8px;"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          style="font-size: 12px; width: 100px;"
        >
          note
        </div>
      </div>
      <div
        style="display: flex; justify-content: center; align-items: center; gap: 8px;"
      >
        <div
          style="width: 48px; padding: 8px; background-color: rgb(40, 57, 78); border-radius: 8px;"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          style="font-size: 12px; width: 100px;"
        >
          book
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Icon renders Sample 1`] = `
<body>
  <div>
    <svg
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
</body>
`;
